--- a/packages/shared-components/src/event-tiles/UrlPreviewView/UrlPreviewGroupView.module.css
+++ b/packages/shared-components/src/event-tiles/UrlPreviewView/UrlPreviewGroupView.module.css
@@ -10,9 +10,11 @@
     display: flex;
     flex-direction: column;
     gap: var(--cpd-space-4x);
+    margin-bottom: var(--cpd-space-4x);
 
     &.compactLayout {
         gap: var(--cpd-space-2x);
+        margin-bottom: var(--cpd-space-2x);
     }
 
     .toggleButton[data-kind="tertiary"] {
